--- a/rafols/homepage.html
+++ b/rafols/homepage.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Welcome to Our Website</h1>
-    <p>This is the homepage of our website.</p>
+    <p>This is the homepage of my website.</p>
     <nav>
         <a href="about.css">About</a> |
         <a href="contactform.html">Contact</a> |
